# chainscope

./: .cursorrules  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  UNFAITHFUL_SHORTCUTS.md  aux.txt  d  prefill_experiment.py  pyproject.toml  setup.py
.github/workflows/: checks.yml
chainscope/: __init__.py  activations.py  ambiguous_qs_eval.py  answer_flipping_eval.py  anthropic_utils.py  bias_probing.py  cot_eval.py  cot_faithfulness_utils.py  cot_generation.py  cot_splitting.py  data_fetcher.py  direct_eval.py  gt_eval.py  open_ai_utils.py  open_router_utils.py  prompts.py  properties.py  qs_evaluation.py  qs_generation.py  questions.py  rag.py  typing.py  utils.py  values.py
chainscope/api_utils/: anthropic_utils.py  common.py  deepseek_utils.py  open_ai_utils.py  open_router_utils.py
chainscope/data/: df-wm-non-ambiguous-hard-2-yes-no-na.pkl  df-wm-non-ambiguous-hard-2.pkl  df-wm-non-ambiguous.pkl  instructions.yaml  prompts.yaml
notebooks/: ambiguous_qs_eval_analysis.py  analyze_faithful_autorating.py  analyze_faithful_autorating_qwen_itself.ipynb  answer-flipping-interp.py  answer_flipping_analysis.py  answer_flipping_interp_2.py  benchmark_ttpd.py  bias_grouping_permutation_test.py  classify_responses.py  confidence_score_plots.py  cot_paths_eval_analysis.py  cot_paths_eval_stats.py  data_fetcher_example.py  deleteme.py  explore_responses.py  final_output_from_first_prefill.txt  fix_local_gen.py  gemma_2_2b_interp.py  google_ai_studio.py  google_ai_studio2.ipynb  interactive_plots.py  manual_labeling.py  manual_labels_20250123_180705.json  patch_missing_data_in_cot_paths_eval.py  plot_unfaithful_shortcuts.py  plots.py  plots_for_unfaithfulness_pattern_eval.py  plots_for_writeup.py  putnam_plot.py  reverse_qs.ipynb  sanitize_cot_paths_eval.py  scatterplots.ipynb  shortcuts_call_api.py  thinking_models_analysis.py  unfaithfulness_patterns_eval_prompt.py  unknown_qs_analysis.py  yes_no_histograms.py
scripts/: ant_cost.py  eval_answer_flipping.py  eval_cots.py  eval_direct.py  eval_no_cot.py  example_failing_prefill_thoughts_attack.py  full_history_of_notebook_dumper.sh  gen_cots.py  gen_gt.py  gen_gt_eval_data.py  gen_qs.py  make_answer_flipping_eval.sh  make_cot_eval.sh  make_cot_path_eval.sh  make_cot_paths.sh  make_cot_resp.sh  make_cot_resp.zsh  make_cot_splits.sh  make_df.py  make_faithfulness_ds.py  make_gt_eval_data.sh  make_questions.zsh  make_unfaithful_ds.py  migrate.py  plot_direct_vs_cot_acc.py  prefill_attack_attempt.py  process_cot_eval_batches.zsh  run_parallel_evals.zsh  split_cots.py  view_faithfulness_dataset.py
scripts/atcoder/: atcoder1_are_rollouts_correct.py  atcoder3_main_faithfulness_eval.py
scripts/datasets/: ambiguous_qs_eval.py  gen_qs.py  make_questions.zsh  props_eval.py  props_rag_eval.py
scripts/iphr/: .make_cot_resp_local.sh.swp  ambiguity_filter_study.py  collect_activations.py  compute_unfaithfulness_kappa.py  count_iphr_instances.sh  eval_cots.py  exp4_compare_iphr.py  exp4_process_batches.py  exp4_resubmit_fast.py  exp4_resubmit_missing.py  exp4_submit_batches.py  exp6_temperature_analysis.py  gen_cots.py  make_cot_eval.sh  make_cot_resp.sh  make_cot_resp_local.sh  make_df.py  make_faithfulness_ds.py  make_unfaithfulness_pattern_eval.sh  manual_cot_eval.py  process_cot_resp_batches.zsh  process_eval_batches.py  process_temp_batches.py  run_sync_evals.zsh  unfaithfulness_patterns_eval.py  unfaithfulness_patterns_eval_for_case_studies.py
scripts/other/: ant_cost.py  bias_probes_analysis.py  check_batches.py  claude_analyze_case_studies.py  make_iphr_plots.py  migrate.py  migrate_unfaithfulness_dataset.py  most_unfaithful_pairs.py
scripts/putnam/: count_putnam_instances.sh  exp5_compare_putnam.py  (+12 more)
tests/: test_cot_eval.py  test_cot_generation.py  test_cot_splitting.py  test_data.py  test_direct_eval.py  test_qs_evaluation.py  test_qs_generation.py  test_questions.py  utils.py
(+23650 files in other folders)
