[project]
name = "chainscope"
version = "0.1.0"
requires-python = ">=3.10.0"
dependencies = [
    "accelerate==1.0.1",
    "beartype==0.19.0",
    "click==8.1.7",
    "dacite==1.8.1",
    "dataclass-wizard==0.33.0",
    "ipykernel==6.29.5",
    "ipython==8.30.0",
    "ipywidgets==8.1.5",
    "matplotlib==3.10.0",
    "nbformat==5.10.4",
    "numpy==2.2.0",
    "openai==1.58.1",
    "pandas==2.2.3",
    "pre-commit==4.0.1",
    "pyright==1.1.391",
    "pytest==8.3.4",
    "ruff==0.8.3",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "torch==2.4.0",
    "tqdm==4.67.1",
    "transformers==4.46.0",
    "streamlit==1.41.0",
]

[build-system]
requires = ["setuptools", "wheel"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
extend-select = ["I"]
ignore = [
    "F403",  # Star imports usage
    "F405",  # Star imports undefined names
]

[tool.pyright]
typeCheckingMode = "basic"